Revert "FIX: knytter mottatte vedlegg historikkinnslag til behandling (#7211)"
This reverts commit 0fb9eeec1e9cc726ff89c0500a9414a93271e858.